# cpp-sqlite-tutorial

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
app/: 3_insert_data.cpp  CMakeLists.txt  calc.cpp  cli.cpp
cmake/: Format.cmake
dependencies/: CMakeLists.txt
src/arith/: CMakeLists.txt  arith.cpp  arith.hpp
tests/: CMakeLists.txt  test_arith.cpp
